--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <style>
+        .error {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 
@@ -24,8 +29,6 @@
         <div class="circulo"></div>
     </div>
 
-    
-
     <form id="formulario-login" class="formulario-login">
         <!-- Elementos flotantes decoracion -->
         <div class="cuadrados">
@@ -33,7 +36,6 @@
             <div class="square" style="--i:1;"></div>
             <div class="square" style="--i:2;"></div>
         </div>
-
 
         <h2>INICIAR SESIÓN</h2>
         <div class="formulario-entrada">
